# Automated-Testing-Deployment-of-NextCloud-on-Bare-Metal-Cloud

./: README.md
Failure_detection/: detect.sonobuoy_failure.py  detect_cluster_cis.py  (+4 more)
infrastructure_deployment/: README.md  bundle.yaml  bundle.yaml.old  cluster-issuer-prod.yaml  cluster-issuer-staging.yaml  cos-overlay.yaml  model-defaults.yaml  pyproject.toml
infrastructure_deployment/cluster_deployment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nextcloud_deployment/: pyproject.toml
nextcloud_deployment/charts/nextcloud/: values.yaml
nextcloud_deployment/docs/: modules.rst
nextcloud_deployment/functional_testing/: readme.md  setup.sh
nextcloud_deployment/functional_testing/config/: configuration.py
nextcloud_deployment/functional_testing/docs/: index.rst
nextcloud_deployment/functional_testing/docs/_build/doctrees/: environment.pickle  index.doctree
nextcloud_deployment/functional_testing/docs/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
nextcloud_deployment/functional_testing/docs/_build/latex/: nextcloudfunctionltests.fdb_latexmk  nextcloudfunctionltests.fls  nextcloudfunctionltests.ilg  nextcloudfunctionltests.tex
nextcloud_deployment/functional_testing/generate_documentation/: generate_doc.sh
nextcloud_deployment/functional_testing/tests/: test_file_integrity.py  test_logout.py  test_modify_quota.py
nextcloud_deployment/functional_testing/utils/: file_management.py  user_management.py
nextcloud_deployment/functional_testing_nextcloud.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+73 files in other folders)
