[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster_deployment"
version = "0.1.0"
description = "A project to test the deployment of Nextcloud on Kubernetes"
authors = [{name = "skander_lahbaiel", email = "lahbaeil@gmail.com"}]
requires-python = ">=3.7"
dependencies = [
    "selenium",
    "pytest",
    "allure-pytest",
    "pyperclip",
]

[tool.setuptools]
packages = ["tests","tests.check_failures" ]


[tool.pytest.ini_options]
testpaths = ["tests"]